[package]
name = "ecs_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benches"
harness = false

[dependencies]
bevy_ecs = "0.10.1"
edict = "0.5.0"
glam = "0.24.0"
hecs = "0.10.3"
shipyard = "0.6.2"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
paste = "1.0.12"
